--- a/build.gradle
+++ b/build.gradle
@@ -45,4 +45,6 @@ dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
+	testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
 }
