--- a/build.gradle
+++ b/build.gradle
@@ -47,4 +47,5 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
 	testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
+	testRuntime("org.junit.jupiter:junit-jupiter-params:5.2.0")
 }
