--- a/build.gradle
+++ b/build.gradle
@@ -39,13 +39,12 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
+	testCompile("org.junit.jupiter:junit-jupiter-params:5.2.0")
 	testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
-	testRuntime("org.junit.jupiter:junit-jupiter-params:5.2.0")
 }
